--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -6,7 +6,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
   <div class="text-center mt-16">
     <h1 class="text-9xl font-bold mb-4">🏝</h1>
     <h1 class="text-9xl font-bold mb-2">404</h1>
-    <h3 class="text-2xl">The podcast you're looking for couldn't be found.</h3>
+    <h3 class="text-2xl">The episode you're looking for couldn't be found.</h3>
     <a class="btn btn-accent mt-9" href="/">Home</a>
   </div>
 </BaseLayout>
