--- a/src/components/headerCard/HeaderCard.astro
+++ b/src/components/headerCard/HeaderCard.astro
@@ -1,6 +1,6 @@
 ---
 const { title, subtitle } = Astro.props;
-import astropodConf from "../../../astropod.config.mjs";
+import astropodConf from "../../../astropod.config.json";
 
 import ListenOnMenu from "./listenOnMenu.astro";
 import FollowUsMenu from "./followUsMenu.astro";
