--- a/src/components/headerCard/followUsMenu.astro
+++ b/src/components/headerCard/followUsMenu.astro
@@ -1,5 +1,5 @@
 ---
-import astropodConfig from "../../../astropod.config.mjs";
+import astropodConfig from "../../../astropod.config.json";
 import TwitterIcon from "../icons/twitterIcon.astro";
 import YoutubeIcon from "../icons/youtubeIcon.astro";
 import TelegramIcon from "../icons/telegramIcon.astro";
