--- a/src/layouts/EpisodeLayout.astro
+++ b/src/layouts/EpisodeLayout.astro
@@ -3,7 +3,7 @@ import BaseLayout from "./BaseLayout.astro";
 import dayjs from "dayjs";
 import localizedFormat from "dayjs/plugin/localizedFormat";
 import HeaderCard from "../components/headerCard/HeaderCard.astro";
-import astropodConf from "../../astropod.config.mjs";
+import astropodConf from "../../astropod.config.json";
 
 const { title, description, pubDate, cover } = Astro.props;
 dayjs.extend(localizedFormat);
