--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
 import EpisodeLayout from "../layouts/EpisodeLayout.astro";
-import astropodConf from "../../astropod.config.mjs";
+import astropodConf from "../../astropod.config.json";
 import { Content as AboutContent } from "../content/web/about.md";
 ---
 
