adding attributes to feed RSS

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,6 +4,6 @@ import astropodConf from "../../astropod.config.json";
 import { Content as AboutContent } from "../content/web/about.md";
 ---
 
-<EpisodeLayout title="About" description={astropodConf.about} cover={astropodConf.cover}>
+<EpisodeLayout title="About" description={astropodConf.description} cover={astropodConf.cover}>
   <AboutContent />
 </EpisodeLayout>
