--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ const last_posts = posts.slice(0, 3);
         <HorizontalCard
           title={post.data.title}
           img={post.data.cover}
-          desc={post.data.description}
+          desc={post.body.slice(0, 200)}
           url={"/episode/" + post.slug}
           audioUrl={post.data.audioUrl}
           pubDate={post.data.pubDate}
