--- a/src/components/audioPlayer.astro
+++ b/src/components/audioPlayer.astro
@@ -8,7 +8,7 @@ import AudioMutedIcon from "./icons/audioMutedIcon.astro";
 
 <div
   id="audio-player-container"
-  class="w-full bottom-0 sticky bg-base-100 px-5 h-16 items-center transition-opacity hidden opacity-0 duration-500"
+  class="w-full z-20 bottom-0 sticky bg-base-100 px-5 h-16 items-center transition-opacity hidden opacity-0 duration-500"
 >
   <audio src="" preload="metadata"></audio>
   <label class="swap">
