--- a/src/pages/episode/[slug].astro
+++ b/src/pages/episode/[slug].astro
@@ -32,6 +32,7 @@ const description = marked.parse(entry.body.slice(0, 200), { renderer: renderer 
   cover={episode.cover}
   explicit={episode.explicit}
   description={description}
+  cover={episode.cover}
 >
   <Content />
 </EpisodeLayout>
