--- a/src/layouts/EpisodeLayout.astro
+++ b/src/layouts/EpisodeLayout.astro
@@ -11,7 +11,7 @@ const displayDate = dayjs(pubDate).format("ll");
 ---
 
 <BaseLayout title={title} description={description} image={cover}>
-  <HeaderCard title={title} subtitle={astropodConf.name} image={cover} explicit={explicit} />
+  <HeaderCard title={title} subtitle={astropodConf.name} cover={cover} explicit={explicit} />
 
   <main class="md:flex md:justify-center">
     <article class="card prose min-w-full prose-img:mx-auto bg-base-100 shadow-md p-8 mt-12">
