--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
 import Footer from "../components/Footer.astro";
-import astropodConf from "../../astropod.config.json";
+import astropodConfig from "../../astropod.config.json";
 
 import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
 
@@ -9,7 +9,7 @@ const { image, title = SITE_TITLE, description = SITE_DESCRIPTION } = Astro.prop
 ---
 
 <!DOCTYPE html>
-<html lang="en" data-theme={astropodConf.theme}>
+<html lang="en" data-theme={astropodConfig.theme}>
   <head>
     <BaseHead title={title} description={description} image={image} />
   </head>
