fixing bug in marked import

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import astropodConfig from "../../astropod.config.json";
 import HeaderCard from "../components/headerCard/HeaderCard.astro";
 import AudioPlayer from "../components/audioPlayer.astro";
 import PlainTextRenderer from "marked-plaintext";
-import marked from "marked";
+import {marked} from "marked";
 
 const renderer = new PlainTextRenderer();
 
