--- a/src/components/headerCard/HeaderCard.astro
+++ b/src/components/headerCard/HeaderCard.astro
@@ -14,7 +14,7 @@ let cover_url = cover ? cover : astropodConfig.cover;
 <div class="card min-w-full bg-base-100 shadow-md md:pb-3">
   <div class="aspect-[3/1] mt-5 md:min-w-[720px]">
     <div class="relative inline-block">
-      <img src={astropodConfig.banner} alt="imgen" />
+      <img src={astropodConfig.banner} alt="imgen" class="w-full h-auto" />
       <div
         class="absolute top-0 left-0 items-center justify-center w-full h-full bg-gradient-to-t from-gray-900 to-50% to-transparent"
       >
