--- a/src/pages/episode/[slug].astro
+++ b/src/pages/episode/[slug].astro
@@ -4,7 +4,7 @@ import { episodeSchema } from "../../content/config";
 import EpisodeLayout from "../../layouts/EpisodeLayout.astro";
 import AudioPlayer from "../../components/audioPlayer.astro";
 import PlainTextRenderer from "marked-plaintext";
-import marked from "marked";
+import {marked} from "marked";
 
 export async function getStaticPaths() {
   const postEntries = await getCollection("episode");
