improving site SEO

--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -29,7 +29,7 @@ const displayDate = dayjs(pubDate).format("ll");
         <p class="my-1 text-xs md:text-sm line-clamp-2">{desc}</p>
       </a>
     </div>
-    <label class="btn btn-circle md:mx-2 swap">
+    <label class="btn btn-circle md:mx-2 swap" for={id}>
       <input type="checkbox" class="card-pay-buttons" id={id} data-audio-url={audioUrl} />
       <div class="swap-off">
         <PlayIcon />
