improving accesibility on web site

--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -29,8 +29,8 @@ const displayDate = dayjs(pubDate).format("ll");
         <p class="my-1 text-xs md:text-sm line-clamp-2">{desc}</p>
       </a>
     </div>
-    <label class="btn btn-circle md:mx-2 swap" for={id}>
-      <input type="checkbox" class="card-pay-buttons" id={id} data-audio-url={audioUrl} />
+    <label class="btn btn-circle md:mx-2 swap">
+      <input type="checkbox" class="card-pay-buttons" id={id} data-audio-url={audioUrl} aria-label="Play and pause" />
       <div class="swap-off">
         <PlayIcon />
       </div>
