implementing loading audio spinner

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@ const today = new Date();
 
 <footer class="footer footer-center block pb-7 pt-7">
   <div class="inline opacity-50">
-    <!-- Thanks for using Astropod. Pleas keep this line to support the project :) -->
+    <!-- Thanks for using Astropod. Please keep this line to support the project :) -->
     <a href="https://github.com/manuelernestog/astropod" target="_blank">
       Powered by <span class="font-bold"> Astropod ⚡️</span>
     </a>
