--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -14,7 +14,7 @@ const renderer = new PlainTextRenderer();
 export async function getStaticPaths({ paginate }) {
   const episodes = await getCollection("episode");
   episodes.sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
-  return paginate(episodes, { pageSize: 2 });
+  return paginate(episodes, { pageSize: astropodConfig.pageSize });
 }
 const { page } = Astro.props;
 ---
@@ -38,7 +38,7 @@ const { page } = Astro.props;
       ))
     }
   </div>
-  <Pagination />
+  {(page.url.next || page.url.prev) && <Pagination page={page} />}
 </BaseLayout>
 
 <AudioPlayer />
