--- a/src/components/pagination.astro
+++ b/src/components/pagination.astro
@@ -2,14 +2,12 @@
 const { page } = Astro.props;
 
 function getPagination(current, last, size) {
+  let pagination = [current];
   const offset = Math.floor(size / 2);
-  const toEnd = last - current;
-  const leftOffset = current + offset;
-  const start = current <= offset ? 1 : toEnd < offset ? current - (offset - toEnd + offset) : current - offset;
-  const end = offset >= toEnd ? last : current <= offset ? leftOffset + (offset - (current - 1)) : leftOffset;
-  
-  let pagination = [];
-  for (let i = start; i <= end; i++) pagination.push(i);
+  const leftOffset = last - current > offset ? offset : last - current;
+  const rightOffset = current - 1 > offset ? offset : current - 1;
+  for (let i = 1; i < 5 - leftOffset; i++) if (current - i > 0) pagination.unshift(current - i);
+  for (let i = 1; i < 5 - rightOffset; i++) if (current + i <= last) pagination.push(current + i);
   return pagination;
 }
 
@@ -25,20 +23,18 @@ const pagination = getPagination(page.currentPage, page.lastPage, 5);
         </a>
       )
     }
-
     {
       pagination.map((item) => (
-        <a href={`/${item}`} class="join-item btn bg-base-100">
+        <a
+          href={item == 1 ? "/" : `/${item}`}
+          class={item == page.currentPage ? "join-item btn btn-active" : "join-item btn bg-base-100"}
+        >
           {item}
         </a>
       ))
     }
 
-    <!-- <button class="join-item btn bg-base-100">1</button>
-    <button class="join-item btn bg-base-100">2</button>
-    <button class="join-item btn btn-active">3</button>
-    <button class="join-item btn bg-base-100">4</button>
-    <button class="join-item btn bg-base-100">5</button> -->{
+    {
       page.url.next && (
         <a href={page.url.next} class="join-item btn bg-base-100">
           »
