--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,12 +1,17 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
+import astropodConfig from "../../astropod.config.json";
 ---
 
-<BaseLayout title = "404: Not Found">
+<BaseLayout title="404: Not Found">
   <div class="text-center mt-16">
-    <h1 class="text-9xl font-bold mb-4">🏝</h1>
+    <img
+      alt={astropodConfig.name + "cover"}
+      class="rounded-lg w-24 h-24 md:h-40 md:w-40 mx-auto my-5"
+      src={astropodConfig.cover}
+    />
     <h1 class="text-9xl font-bold mb-2">404</h1>
-    <h3 class="text-2xl">The episode you're looking for couldn't be found.</h3>
+    <h3 class="text-2xl">The page you're looking for couldn't be found.</h3>
     <a class="btn btn-accent mt-9" href="/">Home</a>
   </div>
 </BaseLayout>
