--- a/src/pages/episode/[slug].astro
+++ b/src/pages/episode/[slug].astro
@@ -5,6 +5,7 @@ import EpisodeLayout from "../../layouts/EpisodeLayout.astro";
 import AudioPlayer from "../../components/audioPlayer.astro";
 import PlainTextRenderer from "marked-plaintext";
 import { marked } from "marked";
+import astropodConfig from "../../../astropod.config.json";
 
 export async function getStaticPaths() {
   const postEntries = await getCollection("episode");
@@ -27,7 +28,7 @@ const description = marked.parse(entry.body.slice(0, 200), { renderer: renderer 
 ---
 
 <EpisodeLayout
-  title={episode.title}
+  title={`${episode.title} - ${astropodConfig.name}`}
   pubDate={episode.pubDate}
   cover={episode.cover}
   explicit={episode.explicit}
