--- a/src/components/headerCard/HeaderCard.astro
+++ b/src/components/headerCard/HeaderCard.astro
@@ -1,5 +1,5 @@
 ---
-import astropodConfig from "../../../astropod.config.json";
+import astropodConfig from "../../../.astropod/astropod.config.json";
 const { title, subtitle, explicit, cover } = Astro.props;
 
 import ListenOnMenu from "./listenOnMenu.astro";
