--- a/src/components/headerCard/listenOnMenu.astro
+++ b/src/components/headerCard/listenOnMenu.astro
@@ -1,5 +1,5 @@
 ---
-import astropodConfig from "../../../astropod.config.json";
+import astropodConfig from "../../../.astropod/astropod.config.json";
 import GooglePodcastIcon from "../icons/googlePodcastIcon.astro";
 import SpotifyIcon from "../icons/spotifyIcon.astro";
 import ApplePodcastIcon from "../icons/applePodcastIcon.astro";
