--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import astropodConfig from "../../astropod.config.json";
+import astropodConfig from "../../.astropod/astropod.config.json";
 ---
 
 <BaseLayout title="404: Not Found">
