--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
 import EpisodeLayout from "../layouts/EpisodeLayout.astro";
-import astropodConfig from "../../astropod.config.json";
+import astropodConfig from "../../.astropod/astropod.config.json";
 import { Content as AboutContent } from "../content/web/about.md";
 ---
 
